--- a/students/k3339/laboratory_works/Edigareva_Daria/mkdocs.yml
+++ b/students/k3339/laboratory_works/Edigareva_Daria/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
     - Практическая часть 3.1: lab3/practical_work/3.1/index.md
     - Практическая часть 3.2 - Обзор проекта: lab3/practical_work/3.2/index.md
     - Лабораторная часть: lab3/laboratory_works/index.md
+  - Lab 4:
     - Лабораторная часть (коммерческий проект): lab4/index.md
 
 
